Overview of changes in Beebop 1.0.0
===================================

  * First release.