@@ -1,3 +1,9 @@
+Overview of changes from Beebop 1.0.0 to 1.0.1
+==============================================
+
+  * Immediately update controls when rows are added or removed.
+
+
 Overview of changes in Beebop 1.0.0
 ===================================
 
